Rename profile photo to be unique as per feedback

--- a/w5/mehmetemin_yilmaz(upd).html
+++ b/w5/mehmetemin_yilmaz(upd).html
@@ -440,7 +440,7 @@
             <div class="output">
                 Mehmet Emin Yilmaz | Student of MIS in Halic University
             </div>
-            <img src="mehmetemin_yilmaz_profil.jpg" alt="Emin Yilmaz Profil Fotoğrafi" style="position: absolute; top: 8rem; right: 2rem; width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent);">
+            <img src="profil.jpg" alt="Emin Yilmaz Profil Fotoğrafi" style="position: absolute; top: 8rem; right: 2rem; width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent);">
             
             <!-- Navigation -->
             <nav>
