Correct LinkedIn Link

--- a/w5/sevval_koseoglu.html
+++ b/w5/sevval_koseoglu.html
@@ -592,7 +592,7 @@
                             <a href="mailto:sevvalkoseoglu_@hotmail.com">sevvalkoseoglu_@hotmail.com</a>
                         </div>
                         <div class="contact-item">
-                            <a href="www.linkedin.com/in/sevval-koseoglu" target="_blank">linkedin.com/in/sevval-koseoglu</a>
+                            <a href="https://www.linkedin.com/in/sevval-koseoglu/" target="_blank">linkedin.com/in/sevval-koseoglu</a>
                         </div>
                         <div class="contact-item">
                             <a href="https://github.com/sevval-koseoglu" target="_blank">github.com/sevval-koseoglu</a>
