--- a/w5/yusuf_ensar_atmaca.html
+++ b/w5/yusuf_ensar_atmaca.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yusuf Ensar Atmaca | Student</title>
+    <title>Yusuf Ensar Atmaca | Student</title><div class="header-content">
+    <img src="assets/images/yusuf_ensar.jpg" alt="Yusuf Ensar Atmaca" 
+         class="profile-photo">
+    <h1>YUSUF ENSAR ATMACA</h1>
+</div>
     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Fira+Code:wght@400;600&family=Source+Code+Pro:wght@400;600&display=swap');
