--- a/w5/yusuf_ensar_atmaca.html
+++ b/w5/yusuf_ensar_atmaca.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yusuf Ensar Atmaca | Student</title><div class="header-content">
-    <img src="assets/images/yusuf_ensar.jpg" alt="Yusuf Ensar Atmaca" 
+    <title>Yusuf Ensar Atmaca | Student</title>
          class="profile-photo">
     <h1>YUSUF ENSAR ATMACA</h1>
 </div>
@@ -460,16 +459,21 @@
             </nav>
             
             <!-- About Section -->
-            <section id="about">
+       <section id="about">
     <h2>About Me</h2>
     <div class="command-line">
         <span class="prompt">$</span>
         <span class="command">cat about.txt</span>
     </div>
     <div class="output">
-        <p>I'm Yusuf Ensar Atmaca, a university student navigating the exciting world of business and technology.</p>
-        <p>Currently studying Business Administration while independently exploring programming, web development, and how digital tools can transform traditional business practices.</p>
-        <p>This portfolio represents my first steps into web development - a project that combines my academic journey with my growing technical skills.</p>
+        <div style="display: flex; align-items: center; gap: 2rem; flex-wrap: wrap;">
+            <img src="assets/images/yusuf_ensar.jpg" alt="Yusuf Ensar Atmaca" 
+                 style="width: 150px; height: 150px; border-radius: 50%; border: 3px solid #00ff00;">
+            <div style="flex: 1;">
+                <p>Hello! I'm Yusuf Ensar Atmaca, a Business Administration student at Halic University with a growing interest in technology and software development.</p>
+                <p>Currently exploring the intersection of business and technology, learning programming fundamentals while building my foundation in business management.</p>
+            </div>
+        </div>
     </div>
 </section>
             
