--- a/w5/yusuf_ensar_atmaca.html
+++ b/w5/yusuf_ensar_atmaca.html
@@ -467,8 +467,8 @@
     </div>
     <div class="output">
         <div style="display: flex; align-items: center; gap: 2rem; flex-wrap: wrap;">
-            <img src="assets/images/yusufensaratmaca.jpg" alt="Yusuf Ensar Atmaca" 
-                 style="width: 150px; height: 150px; border-radius: 50%; border: 3px solid #00ff00;">
+            <img src="../images/yusufensaratmaca.jpg" alt="Yusuf Ensar Atmaca" 
+     style="width: 150px; height: 150px; border-radius: 50%; border: 3px solid #00ff00;">
             <div style="flex: 1;">
                 <p>Hello! I'm Yusuf Ensar Atmaca, a Business Administration student at Halic University with a growing interest in technology and software development.</p>
                 <p>Currently exploring the intersection of business and technology, learning programming fundamentals while building my foundation in business management.</p>
