Fix: Fotoğraf dosya adı duzeltildi ve HTML guncellendi

--- a/w5/berkay_turkoz.html.html
+++ b/w5/berkay_turkoz.html.html
@@ -430,7 +430,7 @@
             
             <!-- Profile Photo -->
             <div style="text-align: center; margin-bottom: 2rem;">
-                <img src="1.JPG.jpg" alt="Berkay Türköz Photo" style="width: 250px; height: 300px; border-radius: 0; /* Kare şekli için 0 yapıldı */ border: 3px solid var(--accent); box-shadow: 0 0 15px var(--accent);">
+                <img src="berkay_turkoz_photo.jpg" alt="Berkay Türköz Photo" style="width: 250px; height: 300px; border-radius: 0; /* Kare şekli için 0 yapıldı */ border: 3px solid var(--accent); box-shadow: 0 0 15px var(--accent);">
             </div>
 
             <!-- Welcome Message -->
