--- a/w5/yusuf_ensar_atmaca.html
+++ b/w5/yusuf_ensar_atmaca.html
@@ -451,9 +451,9 @@
                 <ul class="output">
                     <li><a href="#about">about.md</a></li>
                     <li><a href="#skills">skills.json</a></li>
-                    <li><a href="#publications">publications/</a></li>
+                    <li><a href="#learning">learning/</a></li>        
                     <li><a href="#education">education.log</a></li>
-                    <li><a href="#certifications">certs.txt</a></li>
+                    <li><a href="#current-focus">focus.txt</a></li>     
                     <li><a href="#contact">contact.txt</a></li>
                 </ul>
             </nav>
