--- a/w5/yusuf_ensar_atmaca.html
+++ b/w5/yusuf_ensar_atmaca.html
@@ -614,6 +614,11 @@
                             <a href="https://github.com/YusufEnsarAtmaca" target="_blank">github.com/YusufEnsarAtmaca</a>
                         </div>
                     </div>
+                                    <div class="output">
+                        <div style="margin-left: 2rem;">
+                            <p style="color: var(--info);">yensar1506@gmail.com</p>
+                        </div>
+                    </div>
                 </div>
             </section>
             
