--- a/w5/yusuf_ensar_atmaca.html
+++ b/w5/yusuf_ensar_atmaca.html
@@ -602,25 +602,22 @@
 </section>
             <!-- Contact Section -->
             <section id="contact">
-                <h2>Contact</h2>
-                <div class="command-line">
-                    <span class="prompt">$</span>
-                    <span class="command">echo $CONTACT_INFO</span>
-                </div>
-                <div class="output">
-                    <div class="contact-info">
-                        </div>
-                        <div class="contact-item">
-                            <a href="https://github.com/YusufEnsarAtmaca" target="_blank">github.com/YusufEnsarAtmaca</a>
-                        </div>
-                    </div>
-                                    <div class="output">
-                        <div style="margin-left: 2rem;">
-                            <p style="color: var(--info);">yensar1506@gmail.com</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+    <h2>Contact</h2>
+    <div class="command-line">
+        <span class="prompt">$</span>
+        <span class="command">echo $CONTACT_INFO</span>
+    </div>
+    <div class="output">
+        <div class="contact-info">
+            <div class="contact-item">
+                <a href="mailto:yensar1506@gmail.com">yensar1506@gmail.com</a>
+            </div>
+            <div class="contact-item">
+                <a href="https://github.com/YusufEnsarAtmaca" target="_blank">github.com/YusufEnsarAtmaca</a>
+            </div>
+        </div>
+    </div>
+</section>
             
             <!-- Footer -->
             <footer>
