Update personal web page without photo

--- a/damla_nur_bilgin.html
+++ b/damla_nur_bilgin.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Damla Nur Bilgin</title>
+    <title>Damla Nur Bilgin - Personal Web Page</title>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #f0f8ff; margin: 20px; }
+        h1 { color: #2a9d8f; }
+        h2 { color: #264653; }
+        section { margin-bottom: 20px; }
+        img { max-width: 200px; border-radius: 10px; }
+        a { color: #e76f51; text-decoration: none; margin-right: 10px; }
+    </style>
 </head>
 <body>
-    <h1>Merhaba, ben Damla Nur Bilgin</h1>
-    <p>Bu benim kişisel web sayfam.</p>
+    <header>
+        <h1>Damla Nur Bilgin</h1>
+        <h2>Third-year International Trade and Business Student</h2>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi! I am Damla Nur Bilgin, a motivated, dynamic, and goal-oriented student. I enjoy teamwork, participating in projects, and I aim to work in an international company in the future.</p>
+    </section>
+
+    <section id="education">
+        <h2>Education</h2>
+        <p>Pursuing a Bachelor's degree in International Trade and Business at Haliç University.</p>
+        <p>Minor: Management Information Systems</p>
+        <p>Languages: English (Education in English)</p>
+    </section>
+
+    <section id="interests">
+        <h2>Interests & Side Projects</h2>
+        <p>My main interests include trade, e-commerce, export/import, finance, and business development.</p>
+        <p>Side project: Currently doing an internship at Süper Film Ambalaj Sanayi.</p>
+        <p>Hobbies: I enjoy taking photos.</p>
+    </section>
+
+    <section id="social">
+        <h2>Social Media</h2>
+        <a href="https://www.linkedin.com/in/damlanurbilgin" target="_blank">LinkedIn</a>
+        <a href="https://github.com/damlanurbilginn" target="_blank">GitHub</a>
+    </section>
 </body>
 </html>
