Add photo tag to personal web page

--- a/damla_nur_bilgin.html
+++ b/damla_nur_bilgin.html
@@ -16,6 +16,7 @@
     <header>
         <h1>Damla Nur Bilgin</h1>
         <h2>Third-year International Trade and Business Student</h2>
+        <img src="assets/myphoto.jpg" alt="Damla Nur Bilgin" style="width:200px; border-radius:10px;">
     </header>
 
     <section id="about">
