--- a/w5/haciemir_yilmaz.html
+++ b/w5/haciemir_yilmaz.html
@@ -514,47 +514,46 @@
             </section>
             
             <!-- Publications Section -->
-            <section id="publications">
-                <h2>Publications</h2>
-                <div class="command-line">
-                    <span class="prompt">$</span>
-                    <span class="command">grep -r "*.pdf" ./publications/ | head -3</span>
+<section id="publications">
+    <h2>Projects & Coursework</h2>
+    <div class="command-line">
+        <span class="prompt">$</span>
+        <span class="command">ls -r ./projects/ | head -3</span>
+    </div>
+    <div class="output">
+        <div class="projects">
+            <div class="project-card">
+                <h3 class="project-title">Library Management System (Course Project)</h3>
+                <p>Developed a simple library management system using Python and SQLite. Focused on CRUD operations, user management, and basic database handling.</p>
+                <div class="project-tech">
+                    <span class="tech-tag">Python</span>
+                    <span class="tech-tag">SQLite</span>
+                    <span class="tech-tag">Coursework</span>
                 </div>
-                <div class="output">
-                    <div class="projects">
-                        <div class="project-card">
-                            <h3 class="project-title">Performance Analysis of Text Chunking Methods for LLM-Based Document Summarization</h3>
-                            <p>Published at UBMK Conference. Research on optimizing text chunking strategies for improved LLM-based document summarization performance.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">LLMs</span>
-                                <span class="tech-tag">Text Chunking</span>
-                                <span class="tech-tag">Summarization</span>
-                                <span class="tech-tag">UBMK</span>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <h3 class="project-title">Sentiment Analysis of Twitter Reflections of Distance Education in the COVID-19 Pandemic Process</h3>
-                            <p>Research analyzing public sentiment towards distance education during the COVID-19 pandemic using Twitter data and NLP techniques.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Sentiment Analysis</span>
-                                <span class="tech-tag">Twitter API</span>
-                                <span class="tech-tag">NLP</span>
-                                <span class="tech-tag">COVID-19</span>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <h3 class="project-title">An Investigation of the Usage of Dynamic Time Warping in String Similarity Estimation</h3>
-                            <p>Comprehensive investigation into DTW algorithms and their applications in string similarity estimation and pattern matching.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">DTW</span>
-                                <span class="tech-tag">String Matching</span>
-                                <span class="tech-tag">Algorithm Analysis</span>
-                                <span class="tech-tag">Research</span>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+            <div class="project-card">
+                <h3 class="project-title">Student Performance Data Analysis</h3>
+                <p>Analyzed student performance dataset using Excel and Python, generating insights and visualizations for key learning trends.</p>
+                <div class="project-tech">
+                    <span class="tech-tag">Python</span>
+                    <span class="tech-tag">Excel</span>
+                    <span class="tech-tag">Data Analysis</span>
                 </div>
-            </section>
+            </div>
+            <div class="project-card">
+                <h3 class="project-title">Responsive Website Development</h3>
+                <p>Built a responsive website as a university project using HTML, CSS, and JavaScript, including navigation and interactive elements.</p>
+                <div class="project-tech">
+                    <span class="tech-tag">HTML</span>
+                    <span class="tech-tag">CSS</span>
+                    <span class="tech-tag">JavaScript</span>
+                    <span class="tech-tag">Web Development</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
             
             <!-- Education Section -->
            <section id="education">
