Photo display issue fixed.

--- a/w5/büşra-yaman.html
+++ b/w5/büşra-yaman.html
@@ -429,7 +429,7 @@
                                                                                            
             </pre>
 
-        <img src="C:\Users\Büşra\mis2003-fall25\w5\Ekran görüntüsü 2025-05-29 151214.png" alt="fotoğraf width="300" height="200">
+            <img src="Ekran_goruntusu_2025-05-29_151214.png" alt="Büşra Yaman'ın Fotoğrafı" width="300" height="350">
             
             <!-- Welcome Message -->
             <div class="command-line">
