--- a/w5/haciemir_yilmaz.html
+++ b/w5/haciemir_yilmaz.html
@@ -606,7 +606,7 @@
                             <a href="mailto:emiryilmaz724@gmail.com">emiryilmaz724@gmail.com</a>
                         </div>
                         <div class="contact-item">
-                            <a href="https://https://www.linkedin.com/in/emir-yılmaz-b35b381a7/" target="_blank">linkedin.com/in/emiryilmaz</a>
+                            <a href="https://https://www.linkedin.com/in/emir-yılmaz-b35b381a7" target="_blank">linkedin.com/in/emiryilmaz</a>
                         </div>
                         <div class="contact-item">
                             <a href="https://https://github.com/emiryilmaz724-cmd" target="_blank">github.com/emiryilmaz724
