--- a/w5/dalidaceren_guney.html
+++ b/w5/dalidaceren_guney.html
@@ -426,7 +426,7 @@
         
         <div class="terminal-body">
             <div>
-                <img class="profile-photo" src="img/profile.jpg" alt="DalidaCerenGUNEY" width="150">
+                <img class="profile-photo" src="/profile.jpg" alt="DalidaCerenGUNEY" width="150">
             </div>
             <br>
             <br>
@@ -677,4 +677,5 @@
         document.head.appendChild(style);
     </script>
 </body>
+
 </html>
