Update personal web page with latest edits

--- a/w5/moulaye_said_chirfi_haidara.html
+++ b/w5/moulaye_said_chirfi_haidara.html
@@ -602,20 +602,13 @@
                 <div class="output">
                     <div class="contact-info">
                         <div class="contact-item">
-                            <a href="mailto:maliozer@safenlp.org">maliozer@safenlp.org</a>
+                            <a href="mailto:saidmoulaye131@gmail.com">saidmoulaye131@gmail.com</a>
                         </div>
+                        
                         <div class="contact-item">
-                            <a href="https://www.linkedin.com/in/maliozer" target="_blank">linkedin.com/in/maliozer</a>
+                            <a href="https://github.com/Flashman23" target="_blank">github.com/Flashamn23</a>
                         </div>
-                        <div class="contact-item">
-                            <a href="https://github.com/maliozer" target="_blank">github.com/maliozer</a>
-                        </div>
-                        <div class="contact-item">
-                            <a href="https://safenlp.substack.com/" target="_blank">safenlp.substack.com</a>
-                        </div>
-                        <div class="contact-item">
-                            <a href="https://safenlp.org" target="_blank">safenlp.org</a>
-                        </div>
+                       
                     </div>
                 </div>
             </section>
@@ -626,7 +619,7 @@
                     <span class="prompt">$</span>
                     <span class="command">exit</span>
                 </div>
-                <p>© 2024 Mehmet Ali Özer | Built with &lt;3 and lots of coffee</p>
+                <p>© 2025 Moulaye Said Chirfi Haidara | Built with &lt;3 and lots of coffee</p>
                 <p>Last login: <span id="current-date"></span></p>
                 <span class="cursor"></span>
             </footer>
