--- a/w5/moulaye_said_chirfi_haidara.html
+++ b/w5/moulaye_said_chirfi_haidara.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mehmet Ali Özer | AI Engineer & Lecturer</title>
+    <title>Moulaye Said Chirfi Haidara | student </title>
     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Fira+Code:wght@400;600&family=Source+Code+Pro:wght@400;600&display=swap');
