Update my personal web page with new changes

--- a/nisanur_kubur.html
+++ b/nisanur_kubur.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Nisanur Kubur | AI Engineer & Lecturer</title>
+    <title> Nisanur Kubur</title>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Fira+Code:wght@400;600&family=Source+Code+Pro:wght@400;600&display=swap');
@@ -445,10 +445,7 @@
                 <span class="prompt">$</span>
                 <span class="command typing-text">whoami</span>
             </div>
-            <div class="output">
-                MSc. Data Science | Director & Head of AI @SafeNLP.org | AI Engineer @ Orion Innovation | Lecturer @
-                Haliç University
-            </div>
+
 
             <!-- Navigation -->
             <nav>
@@ -474,23 +471,9 @@
                     <span class="command">cat about.md</span>
                 </div>
                 <div class="output">
-                    <p>Hello, World! I'm Nisanur Kubur, Director of SafeNLP.org, building safe intelligence systems and
-                        solutions focused on LLMs. I'm an AI Engineer specializing in Large Language Models and Natural
-                        Language Processing with extensive experience in distributed training and model optimization.
+                    <p>Hello, World! I'm Nisanur Kubur, Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit.
                     </p>
-                    <br>
-                    <p>Currently working at Orion Innovation as an AI Engineer and teaching at Haliç University, where I
-                        share my knowledge in Software Development and Artificial Intelligence fundamentals. My
-                        expertise spans from developing language-agnostic auto-evaluation packages for LLMs to
-                        implementing cutting-edge techniques like DPO for model alignment.</p>
-                    <br>
-                    <p>With a Master's degree in Data Science from Yeditepe University and years of experience at
-                        companies like Huawei, I've developed solutions ranging from spell correction systems to
-                        distributed parameter-efficient training strategies. I'm passionate about pushing the boundaries
-                        of AI technology while ensuring safety and reliability in AI systems at SafeNLP.org !</p>
-                    <br>
-                    <p>Check out my blog at <a href="https://safenlp.substack.com/"
-                            target="_blank">safenlp.substack.com</a> where I write about NLP and AI developments.</p>
                 </div>
             </section>
 
@@ -504,7 +487,7 @@
                 <div class="output">
                     <div class="skills-grid">
                         <div class="skill-item">
-                            <div class="skill-name">Large Language Models (LLMs)</div>
+                            <div class="skill-name">Html</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 95%;"></div>
                             </div>
@@ -516,7 +499,7 @@
                             </div>
                         </div>
                         <div class="skill-item">
-                            <div class="skill-name">Distributed Training</div>
+                            <div class="skill-name">C#</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 90%;"></div>
                             </div>
@@ -525,12 +508,6 @@
                             <div class="skill-name">Natural Language Processing</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 93%;"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-name">add yours</div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" style="width: 88%;"></div>
                             </div>
                         </div>
                     </div>
@@ -547,10 +524,10 @@
                 <div class="output">
                     <div class="projects">
                         <div class="project-card">
-                            <h3 class="project-title">Performance Analysis of Text Chunking Methods for LLM-Based
-                                Document Summarization</h3>
-                            <p>Published at UBMK Conference. Research on optimizing text chunking strategies for
-                                improved LLM-based document summarization performance.</p>
+                            <h3 class="project-title">Lorem, ipsum dolor.</h3>
+                            <p>
+
+                            </p>
                             <div class="project-tech">
                                 <span class="tech-tag">LLMs</span>
                                 <span class="tech-tag">Text Chunking</span>
@@ -559,24 +536,11 @@
                             </div>
                         </div>
                         <div class="project-card">
-                            <h3 class="project-title">Sentiment Analysis of Twitter Reflections of Distance Education in
-                                the COVID-19 Pandemic Process</h3>
-                            <p>Research analyzing public sentiment towards distance education during the COVID-19
-                                pandemic using Twitter data and NLP techniques.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Sentiment Analysis</span>
-                                <span class="tech-tag">Twitter API</span>
-                                <span class="tech-tag">NLP</span>
-                                <span class="tech-tag">COVID-19</span>
-                            </div>
-                        </div>
-                        <div class="project-card">
                             <h3 class="project-title">An Investigation of the Usage of Dynamic Time Warping in String
                                 Similarity Estimation</h3>
                             <p>Comprehensive investigation into DTW algorithms and their applications in string
                                 similarity estimation and pattern matching.</p>
                             <div class="project-tech">
-                                <span class="tech-tag">DTW</span>
                                 <span class="tech-tag">String Matching</span>
                                 <span class="tech-tag">Algorithm Analysis</span>
                                 <span class="tech-tag">Research</span>
@@ -596,9 +560,11 @@
                 <div class="output">
                     <div class="projects">
                         <div class="project-card">
-                            <h3 class="project-title">Master of Science - Data Science</h3>
-                            <p style="color: var(--text-secondary);">Yeditepe University | 2020 - 2024</p>
-                            <p>Generation of Image Series From a Sequence of Related Short Sentences</p>
+                            <h3 class="project-title">Master of Science
+
+                            </h3>
+                            <p style="color: var(--text-secondary);">Haliç University | 2022 - 2027</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, aspernatur?</p>
                         </div>
                         <div class="project-card">
                             <h3 class="project-title">Lorem Ipsum Degree</h3>
@@ -619,15 +585,8 @@
                 </div>
                 <div class="output">
                     <div style="margin-left: 2rem;">
-                        <p style="color: var(--info);">→ Building Secure and Trustworthy LLMs Using NVIDIA Guardrails
+                        <p style="color: var(--info);"> certifica
                         </p>
-                        <p style="color: var(--info);">→ MLx Generative AI Theory, Agents, Products - Oxford</p>
-                        <p style="color: var(--info);">→ European Summer School of Artificial Intelligence, Slovenia,
-                        </p>
-                        <p style="color: var(--info);">→ Social COMQUANT'22 - Text Mining and NLP for Computational
-                            Social Sciences</p>
-                        <p style="color: var(--info);">→ DeepLearning.ai Study Group 2019-2020</p>
-                        <p style="color: var(--warning);">★ Üstün Başarı Bursu (Outstanding Achievement Scholarship)</p>
                     </div>
                 </div>
             </section>
