--- a/ayberk_simsek.html
+++ b/ayberk_simsek.html
@@ -435,6 +435,10 @@
               
 
             </pre>
+
+            <div class="portrait">
+            <img src="https://scontent-lax3-1.cdninstagram.com/v/t1.15752-9/575223848_801493809170195_5472672984109742163_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=110&ccb=1-7&_nc_sid=0024fc&_nc_ohc=bZZfFL2ydAQQ7kNvwFi_s7o&_nc_oc=Adn-6cf-xB0AaG5EtQ5Q83PpmNG01sWX4u351axyjMxOWNqTJHkHNayavHfOPC-i9_k&_nc_zt=23&_nc_ht=scontent-lax3-1.cdninstagram.com&oh=03_Q7cD3gG_e6qQ4ApE_hV8N20cMEdVy7AFgpwUZAdhP_9hV5LjnA&oe=692AC868" alt="Ayberk Hasan Şimşek">
+
             
             <!-- Welcome Message -->
             <div class="command-line">
@@ -623,7 +627,7 @@
                     <span class="prompt">$</span>
                     <span class="command">exit</span>
                 </div>
-                <p>© 2024 Mehmet Ali Özer | Built with &lt;3 and lots of coffee</p>
+                <p>© 2025 Ayberk Hasan Şimşek | Built with &lt;3 and lack of sleep</p>
                 <p>Last login: <span id="current-date"></span></p>
                 <span class="cursor"></span>
             </footer>
