Updated image path to assets folder

--- a/w5/irem_kaya.html
+++ b/w5/irem_kaya.html
@@ -477,7 +477,7 @@
                     <span class="command">cat about.md</span>
                 </div>
                 <div class="output">
-                    <img src="images/irem.jpg.jpg" alt="Irem Kaya" style="width:160px; border-radius:50%; display:block; margin: 0 auto 1.5rem auto;">
+                    <img src="assets/irem.jpg" alt="Irem Kaya" style="width:160px; border-radius:50%; display:block; margin: 0 auto 1.5rem auto;">
 
 
 
