Add sahra.jpg to assets folder

--- a/w5/sahra_balikci.html
+++ b/w5/sahra_balikci.html
@@ -427,7 +427,8 @@
  ___/ / ___ |/ __  / _, _/ ___ |   / /_/ / ___ |/ /____/ // /| / /____/ /   
 /____/_/  |_/_/ /_/_/ |_/_/  |_|  /_____/_/  |_/_____/___/_/ |_\____/___/
 
-</pre><img src="sahra.jpg" width="200px">
+</pre><img src="assets/sahra.jpg" alt="Sahra Balıkcı" width="200">
+
             <!-- Welcome Message -->
             <div class="command-line">
                 <span class="prompt">$</span>
