--- a/w5/ozanerdem_tunçer.html
+++ b/w5/ozanerdem_tunçer.html
@@ -480,33 +480,30 @@
                 <div class="output">
                     <div class="skills-grid">
                         <div class="skill-item">
-                            <div class="skill-name">Baketball</div>
+                            <div class="skill-name">Web Proggraming</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 95%;"></div>
                             </div>
                         </div>
                         <div class="skill-item">
-                            <div class="skill-name">clash royale</div>
+                            <div class="skill-name">Python</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 92%;"></div>
                             </div>
                         </div>
                         <div class="skill-item">
-                            <div class="skill-name">Distributed Training</div>
+                            <div class="skill-name">MS Office</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 90%;"></div>
                             </div>
                         </div>
                         <div class="skill-item">
-                            <div class="skill-name">Natural Language Processing</div>
+                            <div class="skill-name">VS Code</div>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 93%;"></div>
                             </div>
                         </div>
-                        <div class="skill-item">
-                            <div class="skill-name">add yours</div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" style="width: 88%;"></div>
+                    
                             </div>
                         </div>
                     </div>
