Updated image path to assets folder.

--- a/w5/emre_sungur.html
+++ b/w5/emre_sungur.html
@@ -474,7 +474,7 @@
                     <span class="command">cat about.md</span>
                 </div>
                 <div class="output">
-                    <img src="images/emre.jpg" alt="Emre Sungur" class="profile-pic">
+                    <img src="assets/emre.jpg" alt="Emre Sungur" class="profile-pic">
                     <p>Hello! I'm Emre Sungur, a Management Information Systems student at Halic University. I'm passionate about Web Development, Data Analysis, and exploring AI technologies</p>
                     <br>
                     <p>Currently learning software development, database management, and AI applications. I enjoy building small projects and experimenting with coding challenges.</p>
